test/users/thom/topLevelCode.good
topLevelCode.chpl:6 syntax error: near ';'
