test/users/thom/topLevelCode.chpl
def main()
{
   //do stuff
}

def something();
{
   //this code is always executed
}
